[package]
name = "valerie-frontend"
version = "0.1.0"
authors = ["niranjana687 <niranjana687@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
opt-level =  3
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
valerie = "0.1.2"
surf = {version = "1.0.3"}
